--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -66,20 +66,20 @@
         app:layout_constraintStart_toEndOf="@+id/email"
         app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
-    <TextView
-        android:id="@+id/check_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:fontFamily="@font/bold_font"
-        android:visibility="gone"
-        android:text="Check text"
-        android:textColor="@color/login_form_details_dark"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintEnd_toEndOf="@+id/guideline_right"
-        app:layout_constraintStart_toStartOf="@+id/guideline_left"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
+    <!--<TextView-->
+        <!--android:id="@+id/check_text"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:layout_marginLeft="10dp"-->
+        <!--android:fontFamily="@font/bold_font"-->
+        <!--android:visibility="gone"-->
+        <!--android:text="Check text"-->
+        <!--android:textColor="@color/login_form_details_dark"-->
+        <!--app:layout_constraintHorizontal_bias="0.0"-->
+        <!--app:layout_constraintEnd_toEndOf="@+id/guideline_right"-->
+        <!--app:layout_constraintStart_toStartOf="@+id/guideline_left"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/email" />-->
 
 
     <TextView
@@ -93,7 +93,7 @@
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
-        app:layout_constraintTop_toBottomOf="@+id/check_text" />
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <EditText
         android:id="@+id/password"
@@ -115,7 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/bold_font"
-        android:text="Password Confi: "
+        android:text="Password Confirm : "
         android:textColor="@color/login_form_details_dark"
         app:layout_constraintEnd_toEndOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
