--- a/app/src/main/res/drawable/air_history_show_btn.xml
+++ b/app/src/main/res/drawable/air_history_show_btn.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#0072ff"
-        android:endColor="#00c6ff"
+        android:startColor="#86A8E7"
+        android:endColor="#91EAE4"
         android:angle="135"/>
 
     <stroke android:color="@color/login_form_details_gray"/>
