--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -15,10 +15,19 @@
             android:id="@+id/nav_aqi"
             android:icon="@drawable/air"
             android:title="Air Quality Index" />
+
         <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/settings"
-            android:title="Settings" />
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/logout"
+            android:title="Logout" />
+
+
+        <!--<item-->
+            <!--android:id="@+id/nav_settings"-->
+            <!--android:icon="@drawable/settings"-->
+            <!--android:title="Settings" />-->
+        <!---->
+
     </group>
 
 </menu>
