--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -22,18 +22,41 @@
             app:titleTextAppearance="@style/TitleBarTextAppearance"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
 
-            <TextView
-                android:id="@+id/title"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textAlignment="center"
-                android:fontFamily="@font/normal_font"
-                android:text="Sandiego, UCSD"
-                android:textColor="#000"
-                android:textSize="20dp"
-                app:fontFamily="@font/sarabun_medium" />
+                android:orientation="vertical"
+                >
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    >
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:fontFamily="@font/normal_font"
+                        android:text="Sandiego, UCSD"
+                        android:textColor="#000"
+                        android:textSize="19dp"
+                        app:fontFamily="@font/sarabun_medium" />
 
+                    <TextView
+                        android:id="@+id/device_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:fontFamily="@font/normal_font"
+                        android:text="Device not Connected"
+                        android:textColor="@color/middle_gray"
+                        android:textSize="14dp"
+                        app:fontFamily="@font/sarabun_medium" />
+                </LinearLayout>
+            </LinearLayout>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
