--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="login_form_details_dark">#000</color>
     <color name="login_form_details_gray">#D3D3D3</color>
 
+    <color name="middle_gray">#808080</color>
+
 
     <color name="radio_btn_color">#036</color>
     <color name="warning_color">#f00</color>
