--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -132,7 +132,7 @@
             android:layout_marginLeft="104dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="@drawable/heart_rate"
+            android:background="@drawable/heart"
             android:onClick="onClick" />
 
         <TextView
